--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "dev:mock": "concurrently --kill-others  \"NEXT_PUBLIC_API_MOCKING=enable next dev\" \"npx tsx watch ./src/mocks/http.ts\"",
     "generate:svg-component": "npx @svgr/cli --ignore-existing --jsx-runtime=automatic --out-dir src/components/common/icons --typescript -- src/assets/icons",
+    "code-gen": "pnpm graphql-codegen --config codegen.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -18,12 +19,13 @@
     "@apollo/client": "^3.9.5",
     "@apollo/experimental-nextjs-app-support": "^0.11.2",
     "@sentry/nextjs": "^7.105.0",
+    "@tanstack/react-query": "^5.51.23",
     "@vercel/speed-insights": "^1.0.11",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
     "firebase": "^10.8.1",
-    "graphql": "^16.8.1",
+    "graphql": "^16.9.0",
     "graphql-ws": "^5.15.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -44,11 +46,16 @@
     "sharp": "^0.33.3",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.2.1",
-    "tailwind-scrollbar-hide": "^1.1.7",
-    "typescript": "5.3.3"
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
+    "@0no-co/graphqlsp": "^1.12.12",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/near-operation-file-preset": "^3.0.0",
+    "@graphql-codegen/schema-ast": "^4.1.0",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@mswjs/http-middleware": "^0.9.2",
+    "@parcel/watcher": "^2.4.1",
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-interactions": "^7.6.17",
     "@storybook/addon-links": "^7.6.17",
@@ -58,6 +65,7 @@
     "@storybook/react": "^7.6.17",
     "@storybook/test": "^7.6.17",
     "@svgr/cli": "^8.1.0",
+    "@tanstack/react-query-devtools": "^5.51.23",
     "@types/express": "^4.17.21",
     "@types/gtag.js": "^0.0.19",
     "@types/jsonwebtoken": "^9.0.5",
@@ -83,7 +91,8 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "storybook": "^7.6.17",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.3.3"
   },
   "msw": {
     "workerDirectory": "public"
