--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
     "@apollo/experimental-nextjs-app-support": "^0.11.2",
     "@sentry/nextjs": "^7.105.0",
     "@tanstack/react-query": "^5.51.23",
+    "@tanstack/react-query-next-experimental": "^5.51.23",
     "@vercel/speed-insights": "^1.0.11",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
