--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
     "firebase": "^10.8.1",
+    "framer-motion": "^11.3.27",
     "graphql": "^16.9.0",
     "graphql-ws": "^5.15.0",
     "jsonwebtoken": "^9.0.2",
