--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,8 @@
     "@vercel/speed-insights": "^1.0.11",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
+    "critters": "^0.0.24",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "dayjs": "^1.11.10",
     "firebase": "^10.8.1",
     "framer-motion": "^11.3.27",
@@ -33,7 +35,7 @@
     "lodash": "^4.17.21",
     "lottie-react": "2.4.0",
     "mixpanel-browser": "^2.50.0",
-    "next": "^14.1.0",
+    "next": "^14.2.4",
     "posthog-js": "^1.147.0",
     "posthog-node": "^4.0.1",
     "react": "18.2.0",
