--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -36,5 +36,6 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@9.2.0"
 }
