--- a/apps/web/deploy/development/Dockerfile
+++ b/apps/web/deploy/development/Dockerfile
@@ -49,4 +49,4 @@ COPY --from=installer --chown=nextjs:nodejs /app/apps/web/.next/standalone ./
 COPY --from=installer --chown=nextjs:nodejs /app/apps/web/.next/static ./apps/web/.next/static
 COPY --from=installer --chown=nextjs:nodejs /app/apps/web/public ./apps/web/public
 
-CMD ["node", "/app/server.js"]
+CMD ["node", "/app/apps/web/server.js"]
