--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@rnx-kit/metro-config": "^2.0.1",
+    "@rnx-kit/metro-resolver-symlinks": "^0.2.1",
     "react": "18.3.1",
     "react-native": "0.76.6"
   },
