--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -11,8 +11,6 @@
   },
   "dependencies": {
     "@react-native/gradle-plugin": "^0.76.6",
-    "@rnx-kit/metro-config": "^2.0.1",
-    "@rnx-kit/metro-resolver-symlinks": "^0.2.1",
     "react": "18.3.1",
     "react-native": "0.76.6"
   },
@@ -20,6 +18,9 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
+    "@rnx-kit/babel-preset-metro-react-native": "^2.0.0",
+    "@rnx-kit/metro-config": "^2.0.1",
+    "@rnx-kit/metro-resolver-symlinks": "^0.2.1",
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
@@ -27,6 +28,7 @@
     "@react-native/eslint-config": "0.76.6",
     "@react-native/metro-config": "0.76.6",
     "@react-native/typescript-config": "0.76.6",
+    "@rnx-kit/cli": "^0.18.4",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
