--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -10,7 +10,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native/gradle-plugin": "^0.76.6",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-webview": "^13.13.1"
@@ -23,11 +22,11 @@
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
     "@react-native/babel-preset": "0.76.6",
+    "@react-native/codegen": "^0.77.0",
     "@react-native/eslint-config": "0.76.6",
+    "@react-native/gradle-plugin": "^0.77.0",
     "@react-native/metro-config": "0.76.6",
     "@react-native/typescript-config": "0.76.6",
-    "@rnx-kit/babel-preset-metro-react-native": "^2.0.0",
-    "@rnx-kit/cli": "^0.18.4",
     "@rnx-kit/metro-config": "^2.0.1",
     "@rnx-kit/metro-resolver-symlinks": "^0.2.1",
     "@types/react": "^18.2.6",
