--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,11 +18,8 @@
   "dependencies": {
     "@apollo/client": "^3.9.5",
     "@apollo/experimental-nextjs-app-support": "^0.11.2",
-    "@sentry/nextjs": "^7.105.0",
-    "@sentry/utils": "^8.33.1",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-query-next-experimental": "^5.51.23",
-    "@vercel/speed-insights": "^1.0.11",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
@@ -57,6 +54,7 @@
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.12.12",
+    "@builder.io/partytown": "^0.10.3",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/near-operation-file-preset": "^3.0.0",
     "@graphql-codegen/schema-ast": "^4.1.0",
@@ -73,6 +71,7 @@
     "@storybook/test": "^7.6.17",
     "@svgr/cli": "^8.1.0",
     "@tanstack/react-query-devtools": "^5.51.23",
+    "@types/compression-webpack-plugin": "^9.1.4",
     "@types/express": "^4.17.21",
     "@types/gtag.js": "^0.0.19",
     "@types/jsonwebtoken": "^9.0.5",
@@ -86,7 +85,10 @@
     "@typescript-eslint/eslint-plugin": "^8.4.0",
     "@typescript-eslint/parser": "^8.4.0",
     "autoprefixer": "^10.4.17",
+    "brotli-webpack-plugin": "^1.1.0",
+    "compression-webpack-plugin": "^11.1.0",
     "concurrently": "^8.2.2",
+    "copy-webpack-plugin": "^13.0.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.0",
     "eslint-config-prettier": "^9.1.0",
@@ -97,6 +99,7 @@
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-unused-imports": "^4.1.3",
     "express": "^4.18.2",
+    "html-webpack-plugin": "^5.6.3",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "msw": "^2.2.1",
