--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,7 +29,6 @@
     "class-variance-authority": "^0.7.1",
     "critters": "^0.0.25",
     "dayjs": "^1.11.13",
-    "embla-carousel-react": "^8.6.0",
     "firebase": "^10.14.1",
     "graphql": "^16.10.0",
     "graphql-ws": "^5.16.2",
@@ -46,9 +45,9 @@
     "react-error-boundary": "^4.1.2",
     "react-intersection-observer": "^9.16.0",
     "react-scroll": "1.9.0",
-    "react-swipeable-views": "^0.14.0",
     "react-tabs": "^6.1.0",
     "recoil": "^0.7.7",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar-hide": "^1.3.1",
     "vaul": "^1.1.2"
