--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "dev:mock": "concurrently --kill-others  \"NEXT_PUBLIC_API_MOCKING=enable next dev\" \"npx tsx watch ./src/mocks/http.ts\"",
     "generate:svg-component": "npx @svgr/cli --ignore-existing --jsx-runtime=automatic --out-dir src/components/common/icons --typescript -- src/assets/icons",
     "code-gen": "pnpm graphql-codegen --config codegen.ts",
@@ -27,26 +27,25 @@
     "@tanstack/react-query-next-experimental": "^5.71.10",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
-    "critters": "^0.0.25",
     "dayjs": "^1.11.13",
     "firebase": "^10.14.1",
     "graphql": "^16.10.0",
     "graphql-ws": "^5.16.2",
+    "jotai": "^2.12.4",
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.63.0",
     "motion": "^12.6.3",
-    "next": "^14.2.26",
+    "next": "^15.3.2",
     "nuqs": "^2.4.1",
     "posthog-js": "^1.234.9",
     "posthog-node": "^4.11.1",
     "radix-ui": "^1.1.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-error-boundary": "^4.1.2",
     "react-intersection-observer": "^9.16.0",
-    "react-scroll": "1.9.0",
+    "react-scroll": "^1.9.3",
     "react-tabs": "^6.1.0",
-    "recoil": "^0.7.7",
     "swiper": "^11.2.6",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar-hide": "^1.3.1",
@@ -64,18 +63,17 @@
     "@mswjs/http-middleware": "^0.9.2",
     "@next/bundle-analyzer": "^15.2.4",
     "@parcel/watcher": "^2.5.1",
-    "@storybook/addon-essentials": "^7.6.20",
-    "@storybook/addon-interactions": "^7.6.20",
-    "@storybook/addon-links": "^7.6.20",
-    "@storybook/addon-onboarding": "^1.0.11",
-    "@storybook/blocks": "^7.6.20",
-    "@storybook/nextjs": "^7.6.20",
-    "@storybook/react": "^7.6.20",
-    "@storybook/test": "^7.6.20",
+    "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/addon-interactions": "^8.6.12",
+    "@storybook/addon-links": "^8.6.12",
+    "@storybook/addon-onboarding": "^8.6.12",
+    "@storybook/blocks": "^8.6.12",
+    "@storybook/nextjs": "^8.6.12",
+    "@storybook/react": "^8.6.12",
+    "@storybook/test": "^8.6.12",
     "@svgr/cli": "^8.1.0",
     "@tanstack/react-query-devtools": "^5.71.10",
     "@types/express": "^4.17.21",
-    "@types/gtag.js": "^0.0.19",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash": "^4.17.16",
     "@types/mixpanel-browser": "^2.54.0",
