--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib",
-  "typescript.enablePromptUseWorkspaceTsdk": true,
-  "eslint.workingDirectories": [{ "pattern": "apps/*" }]
+  "eslint.workingDirectories": [{ "mode": "auto" }]
 }
