--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "motion": "^12.6.3",
     "next": "^15.3.2",
     "radix-ui": "^1.4.2",
     "react": "^19.1.0",
