--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -3,31 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix",
-    "lint:check": "next lint"
+    "lint:check": "next lint",
+    "prettier-fix": "prettier --write \"./**/*.{js,ts,tsx}\" --ignore-path .gitignore --ignore-path .prettierignore "
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "motion": "^12.6.3",
     "next": "^15.3.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
-    "@jirum/prettier": "workspace:*",
     "@jirum/eslint-config-jirum": "workspace:*",
+    "@jirum/prettier": "workspace:*",
     "@jirum/tsconfig": "workspace:*",
-    "@tailwindcss/postcss": "^4.1.5",
-    "@types/node": "^22.15.16",
-    "@types/react": "^19.1.3",
-    "@types/react-dom": "^19.1.3",
+    "@tailwindcss/postcss": "^4.1.7",
+    "@types/node": "^22.15.21",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.2",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.7"
   },
   "engines": {
     "node": ">=20"
-  }
+  },
+  "packageManager": "pnpm@10.10.0"
 }
