--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -50,7 +50,7 @@
     "react-tabs": "^6.1.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.3.1",
-    "tailwind-scrollbar-hide": "^1.3.1",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
@@ -74,6 +74,7 @@
     "@storybook/react": "^8.6.12",
     "@storybook/test": "^8.6.12",
     "@svgr/cli": "^8.1.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query-devtools": "^5.71.10",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.9",
@@ -84,7 +85,6 @@
     "@types/react-dom": "^19",
     "@types/react-scroll": "^1.8.10",
     "@types/react-swipeable-views": "^0.13.6",
-    "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
     "eslint": "^9.29.0",
     "eslint-plugin-storybook": "^0.10.0",
@@ -95,9 +95,9 @@
     "next-pwa": "^5.6.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.12",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "storybook": "^8.6.12",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
   },
   "msw": {
