chore(ci,web): 프로덕션 배포 파이프라인 및 Dockerfile 업데이트

--- a/.github/workflows/deploy-web-staging.yml
+++ b/.github/workflows/deploy-web-staging.yml
@@ -7,9 +7,6 @@ on:
     paths:
       - apps/web/**
       - packages/**
-      - pnpm-lock.yaml
-      - turbo.json
-      - .github/workflows/deploy-web-staging.yml
   workflow_dispatch:
 
 jobs:
@@ -38,7 +35,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
         with:
           version: latest
-          config-inline: |
+          buildkitd-config-inline: |
             [worker.oci]
               max-parallelism = 4
 
